import public "serializationPresets.proto";

package proto_vector_test;

message TestItem
{
  option (serializable) = "versioned; binary; db";

  optional string name = 1;
}

message TestMessage
{
  option (serializable) = "versioned; binary; db";

  repeated  TestItem items          = 1;
}